Moved maven runtime and other "wrapper" bundles to m2e-maven-runtime
Signed-off-by: Igor Fedorenko <igor@ifedorenko.com>